// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csf-story Named object export 1`] = `
Object {
  "source": "
      export const myStory = {
        i: 1,
      };
    ",
  "stories": Object {},
}
`;

exports[`csf-story No arguments 1`] = `
Object {
  "source": "
      export const myStory = () => {};
    ",
  "stories": Object {
    "myStory": Object {
      "arguments": Array [],
      "loc": Object {
        "end": Object {
          "column": 37,
          "line": 2,
        },
        "start": Object {
          "column": 29,
          "line": 2,
        },
      },
      "name": "myStory",
      "source": "() => {};",
    },
  },
}
`;

exports[`csf-story No story 1`] = `
Object {
  "source": "
      const i = 1;
    ",
  "stories": Object {},
}
`;

exports[`csf-story Props argument 1`] = `
Object {
  "source": "
      export const myStory = props => {};
    ",
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 5,
              "line": 0,
            },
            "start": Object {
              "column": 0,
              "line": 0,
            },
          },
          "name": "props",
          "value": "props",
        },
      ],
      "loc": Object {
        "end": Object {
          "column": 40,
          "line": 2,
        },
        "start": Object {
          "column": 29,
          "line": 2,
        },
      },
      "name": "myStory",
      "source": "props => {};",
    },
  },
}
`;

exports[`csf-story Three levels - alias 1`] = `
Object {
  "source": "
      export const myStory = ({ name: { first, last }, age }) => {};
    ",
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 31,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 24,
                  "line": 0,
                },
                "start": Object {
                  "column": 9,
                  "line": 0,
                },
              },
              "name": "name",
              "value": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 16,
                      "line": 0,
                    },
                    "start": Object {
                      "column": 11,
                      "line": 0,
                    },
                  },
                  "name": "first",
                  "value": "first",
                },
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 22,
                      "line": 0,
                    },
                    "start": Object {
                      "column": 18,
                      "line": 0,
                    },
                  },
                  "name": "last",
                  "value": "last",
                },
              ],
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 29,
                  "line": 0,
                },
                "start": Object {
                  "column": 26,
                  "line": 0,
                },
              },
              "name": "age",
              "value": "age",
            },
          ],
        },
      ],
      "loc": Object {
        "end": Object {
          "column": 67,
          "line": 2,
        },
        "start": Object {
          "column": 29,
          "line": 2,
        },
      },
      "name": "myStory",
      "source": "({ name: { first, last }, age }) => {};",
    },
  },
}
`;

exports[`csf-story Two arguments 1`] = `
Object {
  "source": "
      export const myStory = (props, context) => {};
    ",
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 6,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": "props",
          "value": "props",
        },
        Object {
          "loc": Object {
            "end": Object {
              "column": 15,
              "line": 0,
            },
            "start": Object {
              "column": 8,
              "line": 0,
            },
          },
          "name": "context",
          "value": "context",
        },
      ],
      "loc": Object {
        "end": Object {
          "column": 51,
          "line": 2,
        },
        "start": Object {
          "column": 29,
          "line": 2,
        },
      },
      "name": "myStory",
      "source": "(props, context) => {};",
    },
  },
}
`;

exports[`csf-story Two levels - alias 1`] = `
Object {
  "source": "
      export const myStory = ({ name: MyNam, age }) => {};
    ",
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 21,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 14,
                  "line": 0,
                },
                "start": Object {
                  "column": 9,
                  "line": 0,
                },
              },
              "name": "name",
              "value": "MyNam",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 19,
                  "line": 0,
                },
                "start": Object {
                  "column": 16,
                  "line": 0,
                },
              },
              "name": "age",
              "value": "age",
            },
          ],
        },
      ],
      "loc": Object {
        "end": Object {
          "column": 57,
          "line": 2,
        },
        "start": Object {
          "column": 29,
          "line": 2,
        },
      },
      "name": "myStory",
      "source": "({ name: MyNam, age }) => {};",
    },
  },
}
`;

exports[`csf-story Two levels sub arguments 1`] = `
Object {
  "source": "
      export const myStory = ({ name, age }) => {};
    ",
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 14,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 7,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "name",
              "value": "name",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 12,
                  "line": 0,
                },
                "start": Object {
                  "column": 9,
                  "line": 0,
                },
              },
              "name": "age",
              "value": "age",
            },
          ],
        },
      ],
      "loc": Object {
        "end": Object {
          "column": 50,
          "line": 2,
        },
        "start": Object {
          "column": 29,
          "line": 2,
        },
      },
      "name": "myStory",
      "source": "({ name, age }) => {};",
    },
  },
}
`;

exports[`csf-story Typescript 1`] = `
Object {
  "source": "
      export const myStory = (props: Properties) => {};
    ",
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 18,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": "props",
          "value": "props",
        },
      ],
      "loc": Object {
        "end": Object {
          "column": 54,
          "line": 2,
        },
        "start": Object {
          "column": 29,
          "line": 2,
        },
      },
      "name": "myStory",
      "source": "(props: Properties) => {};",
    },
  },
}
`;
